--- a/src/app/weather/date/[start]/[end]/weather.scss
+++ b/src/app/weather/date/[start]/[end]/weather.scss
@@ -1,19 +1,19 @@
 .date-picker {
   background-color: rgb(200, 200, 200);
   padding: 1em;
-  margin: 1em;
-  border: 1px solid rgb(160, 160, 160);
+  //margin: 1em;
+  //border: 1px solid rgb(160, 160, 160);
   border-radius: 10px;
   box-shadow: 0.5em 0.5em 0.5em rgb(200, 200, 200);
 }
 
 button.get-weather {
-  border: 1px solid rgb(100, 100, 100);
+  //border: 1px solid rgb(100, 100, 100);
   padding: 1em;
-  margin: 1em;
+  //margin: 1em;
   border-radius: 5px;
   color: rgb(50, 50, 50);
-  background-color: chartreuse;
+  background-color: rgb(200, 200, 200);
   font-weight: bold;
   box-shadow: 0.5em 0.5em 0.5em rgb(200, 200, 200);
 
@@ -23,10 +23,20 @@ button.get-weather {
   }
 }
 
+div.weather-data-box {
+  max-height: 1000px;
+  width: 70%;
+  margin: 0 auto;
+  overflow: scroll;
+  background-color: rgb(180, 180, 180);
+}
 
 table.weather-table {
   border-collapse: collapse;
   background-color: rgba(50, 50, 50, 3);
+
+  overflow: scroll;
+
   tr>th, tr>td {
     border: 2px solid rgba(250, 50, 50, 0);
     background-color: rgba(240, 240, 240, 10);
